# PipDepGraph

./: .gitignore  architecture.drawio  couchdb_local.ini  docker-compose.yml  etl_pypi_couchbase.py  etl_pypi_couchdb.py  notebook.py  pydeps.py  setup.cfg
resolver/: hacked_pip_install.py  main.py
