[metadata]
name = pipdepgraph
version = 0.0.1

[options]
install_requires =
    requests
    jsonpath-ng
    aiohttp

[options.extras_require]
etl_pypi_couchbase =
    beautifulsoup4
    ipykernel
    aiostream
    aiocouch

[options.entry_points]
console_scripts =
    pipdepgraph = pipdepgraph:main
